--- a/etc/nginx/sites-enabled/isucari.conf
+++ b/etc/nginx/sites-enabled/isucari.conf
@@ -4,9 +4,20 @@ server {
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:8000;
+    }
+    location = (/|/login|/register|/timeline|/buy/complete|users/setting) {
+        root /home/isucon/isucari/webapp/public;
+        try_files $uri index.html;
+    }
+    location ^~ /upload/ {
+        root /home/isucon/isucari/webapp/public;
+        try_files $uri index.html;
+    }
+    location ~* \.(gif|jpg|png|js|css)$ {
+        root /home/isucon/isucari/webapp/public;
+        try_files $uri index.html;
     }
 }
