--- a/etc/nginx/sites-enabled/isucari.conf
+++ b/etc/nginx/sites-enabled/isucari.conf
@@ -1,4 +1,42 @@
 server {
+    listen 80;
+    server_name isucon9.catatsuy.org;
+
+    location / {
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:8000;
+    }
+    location = (/|/login|/register|/timeline|/buy/complete|users/setting) {
+        root /home/isucon/isucari/webapp/public;
+        try_files $uri index.html;
+    }
+    location ^~ /upload/ {
+        root /home/isucon/isucari/webapp/public;
+        try_files $uri index.html;
+        expires 24h;
+        add_header Cache-Control public;
+        open_file_cache max=100;
+        access_log off;
+        log_not_found off;
+    }
+    location ~* \.(js|css)$ {
+        root /home/isucon/isucari/webapp/public;
+        try_files $uri index.html;
+        expires 24h;
+        add_header Cache-Control public;
+        open_file_cache max=100;
+        access_log off;
+        log_not_found off;
+        gzip on;  # cpu 使うのでメリット・デメリット見極める必要あり。gzip_static 使えるなら事前にgzip圧縮した上でそちらを使う。
+        gzip_types text/css application/javascript application/json application/font-woff application/font-tff image/gif image/png image/jpeg image/svg+xml image/x-icon application/octet-stream;
+        gzip_disable "msie6";
+        gzip_static on;  # nginx configure時に --with-http_gzip_static_module 必要
+        gzip_vary on;
+    }
+}
+
+
+server {
     listen 443 ssl http2;
     server_name isucon9.catatsuy.org;
 
@@ -15,9 +53,24 @@ server {
     location ^~ /upload/ {
         root /home/isucon/isucari/webapp/public;
         try_files $uri index.html;
+        expires 24h;
+        add_header Cache-Control public;
+        open_file_cache max=100;
+        access_log off;
+        log_not_found off;
     }
-    location ~* \.(gif|jpg|png|js|css)$ {
+    location ~* \.(js|css)$ {
         root /home/isucon/isucari/webapp/public;
         try_files $uri index.html;
+        expires 24h;
+        add_header Cache-Control public;
+        open_file_cache max=100;
+        access_log off;
+        log_not_found off;
+        gzip on;  # cpu 使うのでメリット・デメリット見極める必要あり。gzip_static 使えるなら事前にgzip圧縮した上でそちらを使う。
+        gzip_types text/css application/javascript application/json application/font-woff application/font-tff image/gif image/png image/jpeg image/svg+xml image/x-icon application/octet-stream;
+        gzip_disable "msie6";
+        gzip_static on;  # nginx configure時に --with-http_gzip_static_module 必要
+        gzip_vary on;
     }
 }
